tests/test_assets/semantic/valid/raw_pointers/address_and_dereference.cog
main::() -> void {
    value: i32 = 10;
    pointer: i32* = &value;

    *pointer = 20;
    *pointer += 2;
    (*pointer)++;

    same_pointer: i32* = &*pointer;
    *&value = 30;

    null_pointer: i32* = 0;

    same_pointer;
    null_pointer;
}
