tests/test_assets/semantic/invalid/pointers/readonly_address_cannot_be_mutable.cog
recover_mutable_access::(
    value: readonly i32*
) -> void {
    mutable: i32* = &*value;
}
